--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <script src="app.js"></script>
+    
     <title>randomizer</title>
 </head>
 <body>
@@ -153,4 +153,7 @@
             </td>
         </tr>
     </table>
+    <button id="randomize" type="button">test</button>
+    
+    <script type="module" src="app.js"></script>
 </body>
