--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <p class="number">31</p>
             </td>
             <td class="seat" id="6">
-                <p class="name">abcdefg</p>
+                <p class="name">hjkgh</p>
                 <p class="number">31</p>
             </td>
             <td class="seat" id="7">
